syntax = "proto3";

option go_package ="./pb";

package pb;

// ------------------------------------ 
// Messages
// ------------------------------------ 

//--------------------------------user--------------------------------
message User {
  int64 id = 1; //id
  string username = 2; //username
  string password = 3; //password
}

message AddUserReq {
  string username = 1; //username
  string password = 2; //password
}

message AddUserResp {
}

message UpdateUserReq {
  int64 id = 1; //id
  string username = 2; //username
  string password = 3; //password
}

message UpdateUserResp {
}

message DelUserReq {
  int64 id = 1; //id
}

message DelUserResp {
}

message GetUserByIdReq {
  int64 id = 1; //id
}

message GetUserByIdResp {
  User user = 1; //user
}

message SearchUserReq {
  int64 page = 1; //page
  int64 limit = 2; //limit
  int64 id = 3; //id
  string username = 4; //username
  string password = 5; //password
}

message SearchUserResp {
  repeated User user = 1; //user
}



// ------------------------------------ 
// Rpc Func
// ------------------------------------ 

service user{ 

	 //-----------------------user----------------------- 
	 rpc AddUser(AddUserReq) returns (AddUserResp); 
	 rpc UpdateUser(UpdateUserReq) returns (UpdateUserResp); 
	 rpc DelUser(DelUserReq) returns (DelUserResp); 
	 rpc GetUserById(GetUserByIdReq) returns (GetUserByIdResp); 
	 rpc SearchUser(SearchUserReq) returns (SearchUserResp); 

}
